<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">ADD</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">TikTok Plugin</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="cardview_caption_blocklist_content">Word/Sentence Filtered</string>
    <string name="cardview_caption_blocklist_des">"Make blocklist for posts captions.
Posts with following words in their captions will not show up in timeline"</string>
    <string name="cardview_caption_blocklist_title">Caption Blocklist</string>
    <string name="cardview_discover_ads_des">Hide banner ads in top of the discover section</string>
    <string name="cardview_discover_ads_title">Remove Discover Banner Ads</string>
    <string name="cardview_discover_trending_ads_des">Hide trending ads from discover section</string>
    <string name="cardview_discover_trending_ads_title">Remove Discover Trending Ads</string>
    <string name="cardview_download_mute_des">Download and save videos without sound</string>
    <string name="cardview_download_mute_title">Download Mutely</string>
    <string name="cardview_duet_des">"Bypass privacy settings for duet ability.
Some videos still may not be available for duet because of their size or type"</string>
    <string name="cardview_duet_title">Duet</string>
    <string name="cardview_font_content">Proxima Nova</string>
    <string name="cardview_font_des">"Change the default font style of TikTok.
May cause visual problems and need reboot to take effect"</string>
    <string name="cardview_font_title">Font Style</string>
    <string name="cardview_footer">Made with ❤ by SSV</string>
    <string name="cardview_footer_version">Version</string>
    <string name="cardview_force_region">Force Region Mode</string>
    <string name="cardview_force_region_des">"Match each post with selected region and show only relevant results. You're gonna miss a lot of contents from other countries"</string>
    <string name="cardview_gif_download_location_des">Path of downloaded GIFs</string>
    <string name="cardview_gif_location_content">Movies/TikTok</string>
    <string name="cardview_gif_location_title">GIF Download Location</string>
    <string name="cardview_gif_watermark_des">Remove watermark (a TikTok logo) from downloaded and shared GIFs</string>
    <string name="cardview_gif_watermark_title">Remove GIF Watermark</string>
    <string name="cardview_header_is_tiktok_installed">TikTok installed:</string>
    <string name="cardview_hide_long_posts_content">Longer than</string>
    <string name="cardview_hide_long_posts_title">Hide Long Posts</string>
    <string name="cardview_live_des">"Don't show live streams in timeline"</string>
    <string name="cardview_live_title">Remove Live Stream</string>
    <string name="cardview_long_post_des">Posts longer than this time will not show up in timeline. Could be useful for reducing internet usage</string>
    <string name="cardview_play_loop_des">"Stop playing videos when they reached the end and don't repeat them"</string>
    <string name="cardview_play_loop_title">Stop Playing in Loop</string>
    <string name="cardview_playback_speed_des">Set playback speed for app video player</string>
    <string name="cardview_playback_speed_title">Playback Speed</string>
    <string name="cardview_post_caption_des">"Don't show post captions at all"</string>
    <string name="cardview_post_caption_title">Remove Post Caption</string>
    <string name="cardview_region_content">United States</string>
    <string name="cardview_region_des">"TikTok use this location for loading contents.
Attention that some of this regions are restricted by TikTok and if you choose them, you probably receive \"No network connection\" error in TikTok app"</string>
    <string name="cardview_region_title">Region</string>
    <string name="cardview_rewind_des">Add ability to jump to any part of the videos and also enable progress bar for all videos</string>
    <string name="cardview_rewind_title">Rewind (Fast Forward)</string>
    <string name="cardview_stitch_des">"Bypass privacy settings for stitch ability.
Some videos still may not be available for stitch because of their size or type"</string>
    <string name="cardview_stitch_title">Stitch</string>
    <string name="cardview_timeline_ads_des">Hide promoted ads in timeline</string>
    <string name="cardview_timeline_ads_title">Remove Timeline Ads</string>
    <string name="cardview_ui_color_des">Change the default color of views such as main bottom, texts, etc</string>
    <string name="cardview_ui_color_title">UI Colors</string>
    <string name="cardview_video_download_location_des">Path of downloaded videos</string>
    <string name="cardview_video_location_content">DCIM/Camera</string>
    <string name="cardview_video_location_title">Video Download Location</string>
    <string name="cardview_video_watermark_des">Remove watermark (an animated TikTok logo and user id) from downloaded and shared videos</string>
    <string name="cardview_video_watermark_title">Remove Video Watermark</string>
    <string name="center">Center</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkbox_mode">Icon only</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="dialog_caption_blocklist_edittext_helper">Posts with following words in their captions will not appear in your timeline</string>
    <string name="dialog_caption_blocklist_edittext_input_hint">Enter a word</string>
    <string name="dialog_caption_blocklist_edittext_input_is_empty">Input is empty!</string>
    <string name="dialog_caption_blocklist_edittext_input_is_exists">Word is already exists!</string>
    <string name="dialog_caption_blocklist_info">Attention that if you enter a sentence, caption will be check for exact sentence and not each word of sentence separately</string>
    <string name="dialog_caption_blocklist_title">Add Word</string>
    <string name="dialog_color_picker_title">Color Picker</string>
    <string name="dialog_download_mute_info">"This option may not work correctly if video has been downloaded before. In this case navigate to:
&lt;u>TikTok Settings > Free up space&lt;/u>
and clear the cache section"</string>
    <string name="dialog_help_message">"A simple plugin for TikTok modified version from &lt;a href=\"https://t.me/TikTokModCloud\">TikTokMod&lt;/a> telegram channel.

Google Play store version and other mods from the internet are not supported"</string>
    <string name="dialog_help_title">Help</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_launch_button_hint">Position of launch button</string>
    <string name="dialog_launch_button_title">Launch button</string>
    <string name="dialog_location_title">Locations</string>
    <string name="dialog_long_post_helper_no_limit">All posts will show up in timeline</string>
    <string name="dialog_long_post_helper_part1">Posts longer than</string>
    <string name="dialog_long_post_helper_part2">seconds, will not show up in timeline</string>
    <string name="dialog_long_post_title">Long Posts</string>
    <string name="dialog_permission_denied_message">We need access to storage for sending your custom config to TikTok. All your important data will stay in your phone and will not send to any third party server.</string>
    <string name="dialog_permission_denied_title">Permission not granted</string>
    <string name="dialog_region_info">"• TikTok works without need for registration or login with following regions:

- Afghanistan, Argentina, Australia, Azerbaijan, Bangladesh, Belarus, Bolivia, Brazil, Canada, Chile, Colombia, Costa Rica, Cyprus, Egypt, Indonesia, Iraq, Israel, Japan, Lebanon, Libya, Madagascar, Malaysia, Mexico, Morocco, New Zealand, Nigeria, Oman, Pakistan, Palestine, Panama, Paraguay, Peru, Philippines, Puerto Rico, Qatar, Russia, Saudi Arabia, Singapore, South Africa, South Korea, Sri Lanka, Taiwan, Tajikistan, Thailand, Turkey, Turkmenistan, Ukraine, United Arab Emirates, Uzbekistan, Venezuela, Vietnam, Zambia, Bulgaria, Kazakhstan, Kyrgyzstan

• Following regions are restricted by TikTok (Don't choose them):

- Cuba, India, Iran, Syria, Russia"</string>
    <string name="dialog_region_title">Regions</string>
    <string name="dialog_reset_message">"Plugin settings will be reset to default values but app related settings remain untouched.
Are you sure?"</string>
    <string name="dialog_reset_title">Reset</string>
    <string name="dialog_theme_auto_item">Auto (System Default)</string>
    <string name="dialog_theme_dark_item">Dark</string>
    <string name="dialog_theme_light_item">Light</string>
    <string name="dialog_theme_title">Theme</string>
    <string name="dialog_tiktok_not_found_message">First download and install the latest TikTok version from our telegram channel. Google Play store version and other mods from the internet are not supported.</string>
    <string name="dialog_tiktok_not_found_title">TikTok not found</string>
    <string name="enabled">Enabled</string>
    <string name="fab_text">Launch TikTok</string>
    <string name="left">L</string>
    <string name="menu_help">Help</string>
    <string name="menu_telegram_channel">Telegram Channel</string>
    <string name="menu_crowdin_help">Help with translation</string>
    <string name="right">R</string>
</resources>