<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="ltr">
        <CheckBox android:textSize="15.0sp" android:id="@id/checkbox_state" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enabled" style="?checkboxStyle" />
        <CheckBox android:textSize="15.0sp" android:id="@id/checkbox_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/checkbox_mode" style="?checkboxStyle" />
        <com.google.android.material.button.MaterialButtonToggleGroup android:gravity="center_horizontal" android:id="@id/group_button" android:layout_width="fill_parent" android:layout_height="wrap_content" app:selectionRequired="true" app:singleSelection="true" style="?materialButtonToggleGroupStyle">
            <Button android:id="@id/left_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/left" style="@style/MOutlinedButton" />
            <Button android:id="@id/center_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/center" style="@style/MOutlinedButton" />
            <Button android:id="@id/right_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/right" style="@style/MOutlinedButton" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <TextView android:gravity="center_horizontal" android:id="@id/group_button_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_launch_button_hint" style="@style/TextAppearance.Design.HelperText" />
    </LinearLayout>
</ScrollView>