<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?textAppearanceHeadline6" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cardview_region_title" />
        <TextView android:textAppearance="?textAppearanceBodyMedium" android:textColor="?android:textColorSecondary" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/cardview_region_content" />
        <TextView android:textAppearance="?textAppearanceBodyMedium" android:textColor="?android:textColorSecondary" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/cardview_region_des" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>